--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,7 +19,7 @@ jobs:
         # macos-13-xlarge is arm
         #os: ["windows-2022", "ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-13-xlarge"]
         #python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8", "3.7"]
-        #os: ["windows-2022", "ubuntu-24.04"]
+        #os: ["ubuntu-24.04", "ubuntu-24.04-arm"]
         os: ["ubuntu-24.04"]
         python-version: ["3.13"]
     steps:
@@ -37,9 +37,6 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
 
-      - name: Install tox
-        run: pip install tox
-
       - name: Build and run tests using binaries
         run: |
           cd similarity_search
@@ -51,46 +48,10 @@ jobs:
           #./release/test_integr
           make clean
 
-      # Linux Intel only → export CFLAGS
-      # See setup.py flag usage. This prevents from building native binaries, which might be non-portable.
-      - name: Set Linux Intel flags
-        if: ${{ matrix.os == 'ubuntu-24.04' }}
-        run: |
-          echo "CFLAGS=-msse2" >> $GITHUB_ENV
-          echo "CXXFLAGS=-msse2" >> $GITHUB_ENV
-
-      # Windows Intel only → export ARCH
-      # See setup.py flag usage. This prevents from building native binaries, which might be non-portable.
-      - name: Set Windows Intel flags
-        if: ${{ matrix.os == 'windows-2022' }}
-        run: echo "ARCH=SSE2" >> $GITHUB_ENV
-
-      # Linux only: run auditwheel
-      - name: Install auditwheel
-        if: ${{ startsWith(matrix.os, 'ubuntu') }}
-        run: pip install auditwheel
-
-      - name: Build wheels
-        run: uv build --wheel python_bindings/
-
-      - name: Test with pytest and generate coverage file
-        run: |
-          echo "CFLAGS=$CFLAGS"
-          echo "ARCH=$ARCH"
-          PYTHON_VER_NO_DOT=${PYTHON_VERSION//./}
-          cd python_bindings && tox -e py${PYTHON_VER_NO_DOT} --installpkg dist/*.whl
-
-      - name: Repair Linux wheels
-        if: ${{ startsWith(matrix.os, 'ubuntu') }}
-        run: |
-          mkdir -p wheelhouse
-          for whl in python_bindings/dist/*.whl; do
-            if [[ "${{ matrix.os }}" == "ubuntu-24.04" ]]; then
-              auditwheel repair --plat manylinux_2_28_x86_64 "$whl" -w wheelhouse/
-            elif [[ "${{ matrix.os }}" == "ubuntu-24.04-arm" ]]; then
-              auditwheel repair --plat manylinux_2_28_aarch64 "$whl" -w wheelhouse/
-            fi
-          done
+      - name: Build and repair Linux wheels
+        env:
+          PYTHON: ${{ matrix.python-version }}
+        run: ./build_linux_wheels/deploy.sh
 
       # Upload artifacts
       - uses: actions/upload-artifact@v4
