--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -57,7 +57,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.python-version }}-${{ matrix.os }}
-          path: ${{ startsWith(matrix.os, 'ubuntu') && 'wheelhouse/*.whl' || 'python_bindings/dist/*.whl' }}
+          path: ${{ startsWith(matrix.os, 'ubuntu') && 'python_bindings/dist/*.whl' }}
 
 
   aggregate:
