--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,8 +20,12 @@ jobs:
         #os: ["windows-2022", "ubuntu-24.04", "ubuntu-24.04-arm", "macos-13", "macos-13-xlarge"]
         #python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8", "3.7"]
         #os: ["ubuntu-24.04", "ubuntu-24.04-arm"]
+        os: ["ubuntu-24.04-arm"]
+        python-version: ["3.14"]
+        #python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8", "3.7"]
         os: ["ubuntu-24.04"]
-        python-version: ["3.10"]
+        #python-version: ["3.10"]
+        python-version: ["3.14"]
     steps:
       # No need 
       #- name: Install prerequisites
