--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
         #python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8", "3.7"]
         #os: ["ubuntu-24.04", "ubuntu-24.04-arm"]
         #python-version: ["3.13", "3.12", "3.11", "3.10", "3.9", "3.8", "3.7"]
-        os: ["ubuntu-24.04-arm", "ubuntu-24.04"]
+        os: ["ubuntu-24.04-arm"]
         #python-version: ["3.10"]
         python-version: ["3.14"]
     steps:
