Fixing some tests and the CMakeFile.

--- a/similarity_search/CMakeLists.txt
+++ b/similarity_search/CMakeLists.txt
@@ -33,8 +33,7 @@ if(NOT WIN32)
 endif()
 #message(FATAL_ERROR "stopping... compiler version is: ${CMAKE_CXX_COMPILER_ID} ${CXX_COMPILER_VERSION}")
 
-set(SIMD_FLAGS " -march=armv8-a")
-#set(SIMD_FLAGS " -march=native")
+set(SIMD_FLAGS " -march=native")
 #set(SIMD_FLAGS "-march=x86-64")
 #set(SIMD_FLAGS "-march=core2")
 #set(SIMD_FLAGS "-fpic -msse4.2")
