--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -9,7 +9,7 @@ on:
     branches: ["**"]
 
 jobs:
-  build_wheels_and_test_linux:
+  build_wheels_and_test:
     name: Build and test
     permissions:
       contents: read
