yet another shot

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -43,7 +43,7 @@ jobs:
           cd similarity_search
           # No extras at least for now
           #cmake . -DWITH_EXTRAS=1
-          #cmake .
+          cmake .
           #make -j 8
           #./release/bunit
           #./release/test_integr
