--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -37,6 +37,9 @@ jobs:
 
       - name: Install uv
         uses: astral-sh/setup-uv@v3
+        
+      - name: Install tox
+        run: pip install tox
 
       - name: Build and run tests using binaries
         run: |
