--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -85,7 +85,7 @@ jobs:
       matrix:
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
         #python-version: ["3.8", "3.14"]
-        python-version: ["3.8"]
+        python-version: ["3.9"]
 
     steps:
       - uses: actions/checkout@v4
@@ -118,17 +118,14 @@ jobs:
           cmake -G "NMake Makefiles" . || exit /b 1
           nmake || exit /b 1
 
-          echo "PATHS 1!!!!"
-          dir
-          cd
+          ./bunit || exit /b 1
+          ./test_integr || exit /b 1
+
 
           del /q *.exe NonMetricSpaceLib.lib || exit /b 1
           nmake clean || exit /b 1
           rmdir /s /q release
 
-          echo "PATHS 2!!!!"
-          dir
-          cd
 
       - name: Build Python bindings
         shell: cmd
