--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -80,7 +80,8 @@ jobs:
     name: Build and test wheels for Windows
     permissions:
       contents: read
-    runs-on: ["windows-2022"]
+    #runs-on: ["windows-2022"]
+    runs-on: ["windows-11-arm"]
     strategy:
       matrix:
         #python-version: ["3.14", "3.13", "3.12", "3.11", "3.10", "3.9", "3.8"]
