--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -120,9 +120,8 @@ jobs:
           cmake -G "NMake Makefiles" . || exit /b 1
           nmake || exit /b 1
 
-          ./bunit || exit /b 1
-          #./test_integr || exit /b 1
-
+          .\bunit.exe || exit /b 1
+          rem .\test_integr.exe || exit /b 1
 
           del /q *.exe NonMetricSpaceLib.lib || exit /b 1
           nmake clean || exit /b 1
